Colocando mais um livro, colocando por onde entrar em contato, e alterando a cor de fundo do rodape

--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@
         <p>R$ 44,90</p>
         <button>Adicionar ao Carrinho</button>
       </div>
+      <div class="card">
+        <img src="https://via.placeholder.com/200x300" alt="HQ 5">
+        <h3>Batman Absoluto</h3>
+        <p>R$ 30,00</p>
+        <button>Adicionar ao Carrinho</button>
+      </div>
     </section>
   </main>
 
@@ -74,7 +80,8 @@
   <footer>
     <div class="footer-content">
       <p>&copy; 2026 Geek Comics - Todos os direitos reservados</p>
-      <p>Email: contato@geekcomics.com | Tel: (41) 99999-9999</p>
+      <br><p>Caso precise de ajuda so em entrar em contato</p>
+      <br><p>Email: contato@geekcomics.com | Tel: (41) 99999-9999</p>
     </div>
   </footer>
 </body>
