--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <footer>
     <div class="footer-content">
       <p>&copy; 2026 Geek Comics - Todos os direitos reservados</p>
-      <br><p>Caso precise de ajuda so em entrar em contato</p>
+      <br><p>Fique à vontade para entrar em contato caso tenha dúvidas.</p>
       <br><p>Email: contato@geekcomics.com | Tel: (41) 99999-9999</p>
     </div>
   </footer>
