--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
       <div class="card">
         <img src="https://via.placeholder.com/200x300" alt="HQ 3">
         <h3>X-Men Clássicos</h3>
-        <p>R$ 39,90</p>
+        <p>R$ 25,90</p>
         <button>Adicionar ao Carrinho</button>
       </div>
       <div class="card">
         <img src="https://via.placeholder.com/200x300" alt="HQ 4">
         <h3>Demolidor: Renascido</h3>
         <p>R$ 44,90</p>
-        <button>Adicionar ao Carrinho</button>
+        <button>Adicionar no Carrinho</button>
       </div>
       <div class="card">
         <img src="https://via.placeholder.com/200x300" alt="HQ 5">
